--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -16,11 +16,13 @@
     "express": "~4.14.0",
     "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
+    "geocoder": "^0.2.3",
     "mongodb": "^2.2.22",
     "mongoose": "^4.8.0",
     "morgan": "~1.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.3.0",
     "zxcvbn": "^4.4.2"
   }
