--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.15.2",
     "connect-ensure-login": "^0.1.1",
