--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "starter-code",
+  "name": "my-app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "start-dev": "nodemon ./bin/www"
   },
   "dependencies": {
