--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "my-app",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "7.2.0"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "start-dev": "nodemon ./bin/www"
